[package]
name = "gpu_filters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.3.0"
image = "0.24.6"
bytemuck = "1.13.1"
encase = {path = "../encase/", features = ["nalgebra"]}
paste = "1.0.14"
wgpu = "24.0.3"
env_logger = "0.11"
log = "0.4.27"
