[package]
name = "gpu_filters"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.3.0"
image = "0.24.6"
bytemuck = "1.13.1"
paste = "1.0.14"
wgpu = "24.0.3"
env_logger = "0.11"
log = "0.4.27"
graphviz-rust = "0.9.3"
anyhow = "1.0.97"
rand = "0.9.0"
indoc = "2.0.6"
encase = { version = "0.11.0", features = ["nalgebra"] }
nalgebra = "0.33.2"
